added sbt docker plugin